# starward

./: .gitignore  CMakeLists.txt  build.sh  index.html  main.cpp  readme.md  server.sh
assets/shader/: degrade.frag  degrade.vert  level.frag  level.vert
lib/: font8x8.h  git-sync-deps  implementation.cpp  source.cpp
lib/glad/: glad.c  glad.h
src/: buffer.hpp  const.hpp  entity.hpp  external.hpp  framebuffer.hpp  layout.hpp  level.hpp  main.cpp  platform.cpp  platform.hpp  rendering.hpp  shader.hpp  texture.hpp  title.cpp  title.hpp  util.hpp  wrapper.hpp
src/game/: biome.cpp  biome.hpp  color.hpp  emitter.cpp  emitter.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  level.cpp  level.hpp  menu.hpp  physics.cpp  physics.hpp  rigidbody.cpp  rigidbody.hpp  segment.hpp  sounds.cpp  sounds.hpp  tile.cpp  tile.hpp  world.hpp
src/game/entity/: alien.cpp  alien.hpp  all.hpp  blow.cpp  blow.hpp  bullet.cpp  bullet.hpp  dust.cpp  dust.hpp  entity.cpp  entity.hpp  fighter.cpp  fighter.hpp  mine.cpp  mine.hpp  player.cpp  player.hpp  powerup.cpp  powerup.hpp  shield.cpp  shield.hpp  sweeper.cpp  sweeper.hpp  tile.cpp  tile.hpp  turret.cpp  turret.hpp  vertical.cpp  vertical.hpp
src/game/entity/enemy/: alien.cpp  alien.hpp  decay.cpp  decay.hpp  fighter.cpp  fighter.hpp  mine.cpp  mine.hpp  ray.cpp  ray.hpp  sweeper.cpp  sweeper.hpp  tesla.cpp  tesla.hpp  turret.cpp  turret.hpp  vertical.cpp  vertical.hpp
src/game/entity/particle/: blow.cpp  blow.hpp  dust.cpp  dust.hpp  text.cpp  text.hpp  tile.cpp  tile.hpp
src/game/level/: biome.cpp  biome.hpp  box.cpp  box.hpp  level.cpp  level.hpp  matcher.cpp  matcher.hpp  segment.cpp  segment.hpp  tile.hpp
src/gls/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  input.hpp  layout.cpp  layout.hpp  screen.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  state.cpp  state.hpp  texture.cpp  texture.hpp  vertex.hpp  wrapper.hpp
src/platform/: common.cpp  emscripten.cpp  platform.hpp  posix.cpp
src/render/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  input.hpp  layout.cpp  layout.hpp  renderer.cpp  renderer.hpp  screen.hpp  shader.cpp  shader.hpp  sprite.hpp  texture.cpp  texture.hpp  vertex.hpp  wrapper.cpp  wrapper.hpp
src/sound/: buffer.cpp  buffer.hpp  debug.hpp  event.hpp  group.cpp  group.hpp  listener.hpp  source.cpp  source.hpp  system.hpp  volume.hpp
src/util/: field.hpp  ring.hpp
